--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" type="image/x-icon" href="../favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../favicon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tunerr</title>
+    <title>YER | Virtual Tour</title>
+    <meta name="description" content="Bienvenido a Yer Real Estate, explore nuestra visita virtual en 3D.">
+
+    <meta property="og:title" content="Yer Real Estate | 3D Virtual Tour">
+    <meta property="og:description" content="Bienvenido a Yer Real Estate, explore nuestra visita virtual en 3D.">
+    <meta property="og:image" content="./Portrait.png">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Yer Real Estate">
+    <meta property="og:locale" content="es_ES">
 
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,9 +20,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
-    <style>
-
-    </style>
 </head>
 <body">
     <script type="module" src="./script.js"></script>
