Arreglado logo en preload, perspectiva 3d para usuarios movil, estilos de Nuestros Productos y Topnav ahora se ve piola todo

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
     <section id="hero">
         <div class="hero-content">
         <h1>Experiencias 3D web interactivas </h1>
-        <p>Comparte tu visión</p>
+        <p>Transforma tus diseños en experiencias 3D interactivas</p>
         <a href="#contact" class="btn">Empieza tu prueba gratuita</a>
         </div>
 
