Arreglado problema responsiveness en iOS

--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
     <div class="container">
         <h2>Sobre Nosotros</h2>
         <p>
-        Somos un equipo apasionado por la innovación y la excelencia en visualización 3D, comprometidos a ofrecer experiencias digitales de alta gama para todos.
+            En 3D Spaces, nos especializamos en transformar ideas en experiencias tridimensionales inmersivas. Nuestro equipo, apasionado por la tecnología y el diseño, se dedica a crear soluciones innovadoras que permiten a nuestros clientes visualizar y explorar espacios de manera realista y detallada.
         </p>
     </div>
     </section>
