--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" type="image/x-icon" href="../favicon.png">
+    <link rel="icon" href="../cubicup.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YER | Virtual Tour</title>
-    <meta name="description" content="Bienvenido a Yer Real Estate, explore nuestra visita virtual en 3D.">
-
-    <meta property="og:title" content="Yer Real Estate | 3D Virtual Tour">
-    <meta property="og:description" content="Bienvenido a Yer Real Estate, explore nuestra visita virtual en 3D.">
-    <meta property="og:image" content="./Portrait.png">
-    <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Yer Real Estate">
-    <meta property="og:locale" content="es_ES">
+    <title>Cubicup</title>
 
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
